--- a/Componentes principales/PCA.ipynb
+++ b/Componentes principales/PCA.ipynb
@@ -1061,6 +1061,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Analizando los ángulos:\n",
+    "* Cuanto menor es el ángulo entre vectores, más relacionados están\n",
+    "* Ángulos rectos implican que no hay correlación\n",
+    "* Ángulos opuestos indican correlación negativa\n",
+    "* Ángulos más cercanos a los ejes ondican mayor contribución de esa variable a esa componente\n",
+    "\n",
+    "Correlación entre:\n",
+    "* Area e Inflation\n",
+    "* Military y Unemployment\n",
+    "* Life expectancy, Population growth y GDP\n",
+    "\n",
+    "Correlación negativa entre:\n",
+    "* Area e inflation con life expec, Pop.growth y GDP\n",
+    "\n",
+    "Falta de correlación con las anteriores:\n",
+    "* Military y Unemployment\n",
+    "\n",
+    "Influencia sobre PC1 (en concordancia con el primer gráfico):\n",
+    "* Inflation\n",
+    "* Life.expect\n",
+    "* Pop.growth\n",
+    "* GDP\n",
+    "\n",
+    "\n",
+    "\n",
+    "Se puede observar que la primera componente principal aporta un 46% de información, y la segunda aporta 17%\n",
+    "\n",
+    "Parece haber un outlyer abajo a la derecha, que podría influir"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Biplot PCA 3D"
    ]
   },
@@ -1100,6 +1134,20 @@
     "plt.rcParams['figure.figsize'] = (15, 20)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Agregando la tercera componente principal se aporta un 15% más de información"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1107,7 +1155,7 @@
    "hash": "52c95d02f1bfe7c59da35d3ff8fa76f7d162251a8bf0068369a0a87df4b3e5e7"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1121,7 +1169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
