--- a/Componentes principales/PCA.ipynb
+++ b/Componentes principales/PCA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 90,
    "metadata": {
     "scrolled": true
    },
@@ -113,7 +113,7 @@
        "2           9.6  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "2     -0.069973  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
        "Var(PC i)  0.017949  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
        "Cumulative Var(PC i)  0.982051  1.0  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
        "Unemployment -0.244662  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -734,12 +734,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Autovalores"
+    "#### Autovalores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +810,7 @@
        "6     0.130295"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
        "2  110879  13800        4.2        73.84       2.6       -0.80           9.6"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
        "        -2.44662434e-01]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1004,7 @@
        "       0.17492107, 0.13029529])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +1169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
