--- a/TP4/2/First analysis.ipynb
+++ b/TP4/2/First analysis.ipynb
@@ -179,20 +179,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 1, 1, 1, 1, 1, -1, -1, -1, 1, 1, 1, 1, 1, 1, 1, -1, -1, -1, 1, 1, -1, -1, -1, 1]\n",
-      "[1, 1, 1, 1, 1, 1, -1, -1, -1, 1, 1, 1, 1, 1, 1, 1, -1, -1, -1, 1, 1, 1, 1, 1, 1]\n"
+      "L:  [1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, 1]\n",
+      "P:  [1, 1, 1, 1, 1, 1, -1, -1, -1, 1, 1, 1, 1, 1, 1, 1, -1, -1, -1, -1, 1, -1, -1, -1, -1]\n",
+      "T:  [1, 1, 1, 1, 1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1]\n",
+      "X:  [1, -1, -1, -1, 1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, 1, -1, 1, -1, 1, -1, -1, -1, 1]\n"
      ]
     }
    ],
    "source": [
-    "dfToRows= []\n",
+    "data= []\n",
     "toAdd= []\n",
     "for index, row in df.iterrows():\n",
     "    for column in df:\n",
@@ -200,48 +202,279 @@
     "        if (not pd.isna(number)):\n",
     "            toAdd.append(int(number))\n",
     "        else:\n",
-    "            dfToRows.append(toAdd)\n",
+    "            data.append(toAdd)\n",
     "            toAdd=[]\n",
     "            break\n",
     "\n",
-    "print(dfToRows[0])\n",
-    "print(dfToRows[1])"
+    "print(\"L: \", data[11])\n",
+    "print(\"P: \", data[15])\n",
+    "print(\"T: \", data[19])\n",
+    "print(\"X: \", data[23])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analizo la ortogonalidad de los vectores (más cercano a 0 significa más ortogonales)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "L, X:  1\n",
+      "L, T:  -3\n",
+      "L, P:  -1\n",
+      "X, T:  1\n",
+      "X, P:  -5\n",
+      "T, P:  3\n"
      ]
     }
    ],
    "source": [
-    "product= np.dot(dfToRows[11], dfToRows[23])\n",
-    "print(product)"
+    "print(\"L, X: \", np.dot(dfToRows[11], dfToRows[23]))\n",
+    "print(\"L, T: \", np.dot(dfToRows[11], dfToRows[19]))\n",
+    "print(\"L, P: \", np.dot(dfToRows[11], dfToRows[15]))\n",
+    "\n",
+    "print(\"X, T: \", np.dot(dfToRows[23], dfToRows[19]))\n",
+    "print(\"X, P: \", np.dot(dfToRows[23], dfToRows[15]))\n",
+    "\n",
+    "print(\"T, P: \", np.dot(dfToRows[19], dfToRows[15]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Hopfield:\n",
+    "   \n",
+    "    # init method or constructor \n",
+    "    def __init__(self, data):\n",
+    "        self.W= self.calculateSynapticWeight(data)\n",
+    "        \n",
+    "    def calculateSynapticWeight(self, data):\n",
+    "        firstRow= data.pop(0)\n",
+    "        Kt= np.array([firstRow])\n",
+    "        while len(data) > 0:\n",
+    "            newRow= np.array(data.pop(0))\n",
+    "            Kt= np.concatenate([Kt, [newRow]])\n",
+    "        K= Kt.T\n",
+    "        \n",
+    "        N= len(firstRow)\n",
+    "        w= (1/N) * np.dot(K, Kt)\n",
+    "        w= w - np.identity(N) * w[0][0]\n",
+    "        \n",
+    "        return w\n",
+    "   \n",
+    "    # Sample Method \n",
+    "    def run(self, S):\n",
+    "        i= 0\n",
+    "        prevS= S\n",
+    "        actS= self.prodW(prevS)\n",
+    "        while (not np.array_equal(prevS, actS) and i < 5000000):\n",
+    "            prevS= actS;\n",
+    "            actS= self.prodW(prevS)\n",
+    "            i= i+1\n",
+    "        print(i)\n",
+    "        return(actS)\n",
+    "    \n",
+    "    def printW(self):\n",
+    "        print(self.W)\n",
+    "        \n",
+    "    def prodW(self, S):\n",
+    "        return np.sign(np.dot(self.W, S))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "toHop= [data[11], data[15], data[19], data[23]]\n",
+    "h= Hopfield(toHop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23\n"
+      "[1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, 1]\n",
+      "0\n",
+      "[ 1. -1. -1. -1. -1.  1. -1. -1. -1. -1.  1. -1. -1. -1. -1.  1. -1. -1.\n",
+      " -1. -1.  1.  1.  1.  1.  1.]\n"
      ]
     }
    ],
    "source": [
-    "product= np.dot(dfToRows[14], dfToRows[16])\n",
-    "print(product)"
+    "print(data[11])\n",
+    "a= h.run(data[11])\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1 -1 -1 -1 -1  1 -1 -1 -1 -1  1 -1 -1 -1 -1  1 -1 -1 -1 -1  1  1  1  1\n",
+      "  1]\n",
+      "[ 1  1  1  1  1  1 -1 -1 -1  1  1  1  1  1  1  1 -1 -1 -1 -1  1 -1 -1 -1\n",
+      " -1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "L = np.array([1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, 1])\n",
+    "P= np.array([1, 1, 1, 1, 1, 1, -1, -1, -1, 1, 1, 1, 1, 1, 1, 1, -1, -1, -1, -1, 1, -1, -1, -1, -1])\n",
+    "print(L)\n",
+    "print(P)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1 -1 -1 -1 -1  1 -1 -1 -1 -1  1 -1 -1 -1 -1  1 -1 -1 -1 -1  1  1  1  1\n",
+      "   1]]\n",
+      "\n",
+      "[[ 1 -1 -1 -1 -1  1 -1 -1 -1 -1  1 -1 -1 -1 -1  1 -1 -1 -1 -1  1  1  1  1\n",
+      "   1]\n",
+      " [ 1  1  1  1  1  1 -1 -1 -1  1  1  1  1  1  1  1 -1 -1 -1 -1  1 -1 -1 -1\n",
+      "  -1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix= np.array([L])\n",
+    "print(matrix)\n",
+    "print()\n",
+    "matrix= np.concatenate([matrix, [P]])\n",
+    "print(matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "toSend= [data[11], data[15], data[19], data[23]]\n",
+    "print(toSend[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "[[ 1 -1 -1 -1 -1  1 -1 -1 -1 -1  1 -1 -1 -1 -1  1 -1 -1 -1 -1  1  1  1  1\n",
+      "   1]\n",
+      " [ 1  1  1  1  1  1 -1 -1 -1  1  1  1  1  1  1  1 -1 -1 -1 -1  1 -1 -1 -1\n",
+      "  -1]\n",
+      " [ 1  1  1  1  1 -1 -1  1 -1 -1 -1 -1  1 -1 -1 -1 -1  1 -1 -1 -1 -1  1 -1\n",
+      "  -1]\n",
+      " [ 1 -1 -1 -1  1 -1  1 -1  1 -1 -1 -1  1 -1 -1 -1  1 -1  1 -1  1 -1 -1 -1\n",
+      "   1]]\n",
+      "[[ 1  1  1  1]\n",
+      " [-1  1  1 -1]\n",
+      " [-1  1  1 -1]\n",
+      " [-1  1  1 -1]\n",
+      " [-1  1  1  1]\n",
+      " [ 1  1 -1 -1]\n",
+      " [-1 -1 -1  1]\n",
+      " [-1 -1  1 -1]\n",
+      " [-1 -1 -1  1]\n",
+      " [-1  1 -1 -1]\n",
+      " [ 1  1 -1 -1]\n",
+      " [-1  1 -1 -1]\n",
+      " [-1  1  1  1]\n",
+      " [-1  1 -1 -1]\n",
+      " [-1  1 -1 -1]\n",
+      " [ 1  1 -1 -1]\n",
+      " [-1 -1 -1  1]\n",
+      " [-1 -1  1 -1]\n",
+      " [-1 -1 -1  1]\n",
+      " [-1 -1 -1 -1]\n",
+      " [ 1  1 -1  1]\n",
+      " [ 1 -1 -1 -1]\n",
+      " [ 1 -1  1 -1]\n",
+      " [ 1 -1 -1 -1]\n",
+      " [ 1 -1 -1  1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "toSend= [data[11], data[15], data[19], data[23]]\n",
+    "Kt= np.array([toSend.pop(0)])\n",
+    "while len(toSend) > 0:\n",
+    "    newRow= np.array(toSend.pop(0))\n",
+    "    Kt= np.concatenate([Kt, [newRow]])\n",
+    "K= Kt.T\n",
+    "\n",
+    "print(toSend)\n",
+    "print(Kt)\n",
+    "print(K)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "toSend= [data[11], data[15], data[19], data[23]]\n",
+    "print(len(toSend.pop(0)))"
    ]
   },
   {
