Refactor: fixed diagonal of W  and added some cases to test

--- a/TP4/2/First analysis.ipynb
+++ b/TP4/2/First analysis.ipynb
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,10 @@
     "        \n",
     "        N= len(firstRow)\n",
     "        w= (1/N) * np.dot(K, Kt)\n",
-    "        w= w - np.identity(N) * w[0][0]\n",
+    "        \n",
+    "        #Diagonal is zero\n",
+    "        for i in range(len(w)):\n",
+    "            w[i][i]= 0\n",
     "        \n",
     "        return w\n",
     "   \n",
@@ -302,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,8 +314,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pruebo mandando un elemento de los guardados, y debería devolver el mismo en 0 iteraciones:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -329,6 +339,64 @@
    "source": [
     "print(data[11])\n",
     "a= h.run(data[11])\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pruebo cambiando levemente un elemento guardado, y debería devolver el mismo en un par de iteraciones:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, 1]\n",
+      "2\n",
+      "[ 1. -1. -1. -1. -1.  1. -1. -1. -1. -1.  1. -1. -1. -1. -1.  1. -1. -1.\n",
+      " -1. -1.  1.  1.  1.  1.  1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data[11])\n",
+    "a= h.run([1, 1, 1, 1, 1, 1, -1, -1, -1, -1, 1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1, -1, 1, 1, 1])\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pruebo ingresando la Y, que es parecida a la X:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, -1, -1, -1, 1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, 1, -1, 1, -1, 1, -1, -1, -1, 1]\n",
+      "5\n",
+      "[ 1. -1. -1. -1.  1. -1.  1. -1.  1. -1. -1. -1.  1. -1. -1. -1.  1. -1.\n",
+      "  1. -1.  1. -1. -1. -1.  1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data[23])\n",
+    "a= h.run(data[24])\n",
     "print(a)"
    ]
   },
