--- a/TP4/2/First analysis.ipynb
+++ b/TP4/2/First analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -160,7 +162,7 @@
        "11  NaN  NaN  NaN  NaN  NaN"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -238,26 +240,36 @@
     }
    ],
    "source": [
-    "print(\"L, X: \", np.dot(dfToRows[11], dfToRows[23]))\n",
-    "print(\"L, T: \", np.dot(dfToRows[11], dfToRows[19]))\n",
-    "print(\"L, P: \", np.dot(dfToRows[11], dfToRows[15]))\n",
+    "print(\"L, X: \", np.dot(data[11], data[23]))\n",
+    "print(\"L, T: \", np.dot(data[11], data[19]))\n",
+    "print(\"L, P: \", np.dot(data[11], data[15]))\n",
     "\n",
-    "print(\"X, T: \", np.dot(dfToRows[23], dfToRows[19]))\n",
-    "print(\"X, P: \", np.dot(dfToRows[23], dfToRows[15]))\n",
+    "print(\"X, T: \", np.dot(data[23], data[19]))\n",
+    "print(\"X, P: \", np.dot(data[23], data[15]))\n",
     "\n",
-    "print(\"T, P: \", np.dot(dfToRows[19], dfToRows[15]))"
+    "print(\"T, P: \", np.dot(data[19], data[15]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O Q:  23\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"O Q: \", np.dot(data[14], data[16]))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +371,7 @@
      "output_type": "stream",
      "text": [
       "[1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, 1]\n",
-      "2\n",
+      "3\n",
       "[ 1. -1. -1. -1. -1.  1. -1. -1. -1. -1.  1. -1. -1. -1. -1.  1. -1. -1.\n",
       " -1. -1.  1.  1.  1.  1.  1.]\n"
      ]
@@ -380,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +400,7 @@
      "output_type": "stream",
      "text": [
       "[1, -1, -1, -1, 1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, 1, -1, 1, -1, 1, -1, -1, -1, 1]\n",
-      "5\n",
+      "4\n",
       "[ 1. -1. -1. -1.  1. -1.  1. -1.  1. -1. -1. -1.  1. -1. -1. -1.  1. -1.\n",
       "  1. -1.  1. -1. -1. -1.  1.]\n"
      ]
@@ -402,7 +414,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +574,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -569,7 +588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
