--- a/TP4/2/First analysis.ipynb
+++ b/TP4/2/First analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -162,7 +162,7 @@
        "11  NaN  NaN  NaN  NaN  NaN"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,26 +298,45 @@
     "   \n",
     "    # Sample Method \n",
     "    def run(self, S):\n",
+    "        file = open(\"Hopfield.out\", \"w\") \n",
     "        i= 0\n",
     "        prevS= S\n",
+    "        \n",
+    "        file.write(str(prevS))\n",
+    "        file.write(\"\\n\")\n",
+    "        \n",
     "        actS= self.prodW(prevS)\n",
     "        while (not np.array_equal(prevS, actS) and i < 5000000):\n",
-    "            prevS= actS;\n",
-    "            actS= self.prodW(prevS)\n",
     "            i= i+1\n",
-    "        print(i)\n",
+    "            prevS= actS;\n",
+    "            \n",
+    "            file.write(\"Epoch: \")\n",
+    "            file.write(str(i))\n",
+    "            file.write(\"\\n\")\n",
+    "            file.write(str(prevS))\n",
+    "            file.write(\"\\n\")\n",
+    "            \n",
+    "            actS= self.prodW(prevS)\n",
+    "            \n",
+    "        file.write(\"Epoch: \") \n",
+    "        file.write(str(i))\n",
+    "        file.write(\"\\n\")\n",
+    "        file.write(str(actS))\n",
+    "        file.write(\"\\n\")        \n",
+    "        file.close()\n",
+    "        \n",
     "        return(actS)\n",
     "    \n",
     "    def printW(self):\n",
     "        print(self.W)\n",
     "        \n",
     "    def prodW(self, S):\n",
-    "        return np.sign(np.dot(self.W, S))"
+    "        return np.sign(np.dot(self.W, S)).astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -342,9 +361,8 @@
      "output_type": "stream",
      "text": [
       "[1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, 1]\n",
-      "0\n",
-      "[ 1. -1. -1. -1. -1.  1. -1. -1. -1. -1.  1. -1. -1. -1. -1.  1. -1. -1.\n",
-      " -1. -1.  1.  1.  1.  1.  1.]\n"
+      "[ 1 -1 -1 -1 -1  1 -1 -1 -1 -1  1 -1 -1 -1 -1  1 -1 -1 -1 -1  1  1  1  1\n",
+      "  1]\n"
      ]
     }
    ],
@@ -363,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -371,9 +389,8 @@
      "output_type": "stream",
      "text": [
       "[1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, 1]\n",
-      "3\n",
-      "[ 1. -1. -1. -1. -1.  1. -1. -1. -1. -1.  1. -1. -1. -1. -1.  1. -1. -1.\n",
-      " -1. -1.  1.  1.  1.  1.  1.]\n"
+      "[ 1 -1 -1 -1 -1  1 -1 -1 -1 -1  1 -1 -1 -1 -1  1 -1 -1 -1 -1  1  1  1  1\n",
+      "  1]\n"
      ]
     }
    ],
@@ -566,6 +583,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def noisyData(data, prob):\n",
+    "    toRet= []\n",
+    "    for i in range(len(data)):\n",
+    "        rand= np.random.rand()\n",
+    "        if (rand < prob):\n",
+    "            toRet.append(data[i] * -1)\n",
+    "        else:\n",
+    "            toRet.append(data[i])\n",
+    "    return toRet\n",
+    "\n",
+    "toTest= noisyData(data[20], 0.4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, -1, -1, -1, 1, 1, -1, -1, -1, 1, 1, -1, -1, -1, 1, 1, -1, -1, -1, 1, 1, 1, 1, 1, 1]\n",
+      "[1, 1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, 1, -1, 1, -1, 1, 1, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data[20])\n",
+    "print(toTest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1, -1, -1, -1, -1,  1, -1, -1, -1, -1,  1, -1, -1, -1, -1,  1, -1,\n",
+       "       -1, -1, -1,  1,  1,  1,  1,  1])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h.run(toTest)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -574,7 +650,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -588,7 +664,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
